# TestEcoC02

./: README.md  requirements.txt  setup.cfg
Django_test/: __init__.py  models.py  settings.py  urls.py
Django_test/api/: api_views.py  urls.py
Django_test/data/: data_fetcher.py
Django_test/views/: api_views.py
app/: __init__.py  configuration.py  models.py
app/api/: api_views.py  test_api_views.py  urls.py
app/data/: data_fetcher.py  test_data_fetcher.py
app/models/: models.py  serializers.py
web/static/css/: styles.css
web/static/scripts/: app.js
web/templates/: base.html  index.html
