[metadata]
# replace with your username:
name = django_test
version = 0.0.1
author = Christopher Pico
author_email = pico.christopher.pro@gmail.com
description = Test technique Eco CO²
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Vahen/Django_test
project_urls =
    Bug Tracker = https://github.com/Vahen/Django_test/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

